# HiTrinity

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
Changelog/: 0.1.0.md  0.2.0.md  0.3.0.md
docs/: design.md
jetson/: trinity_jetson_start.sh
jetson/src/fusion_node/: package.xml  setup.py
jetson/src/fusion_node/config/: fusion_params.yaml
jetson/src/fusion_node/fusion_node/: fusion_node.py  mode_manager.py
jetson/src/fusion_node/launch/: fusion.launch.py
jetson/src/gpu_scheduler/: package.xml  setup.cfg  setup.py
jetson/src/gpu_scheduler/config/: gpu_params.yaml
jetson/src/gpu_scheduler/gpu_scheduler/: gpu_scheduler.py
jetson/src/gpu_scheduler/launch/: gpu_scheduler.launch.py
jetson/src/trinity_bringup/: package.xml  setup.cfg  setup.py
jetson/src/trinity_bringup/config/: trinity_params.yaml
jetson/src/trinity_bringup/launch/: jetson_bringup.launch.py  jetson_degraded.launch.py  trinity_full.launch.py
jetson/src/trinity_msgs/: CMakeLists.txt  package.xml
jetson/src/trinity_msgs/msg/: FusionResult.msg  Heartbeat.msg  LlmResponse.msg  ObjectInfo.msg  SystemMode.msg  TtsAudio.msg  VoiceCommand.msg
jetson/src/trinity_msgs/srv/: LlmRequest.srv  MapSync.srv
pi3/: pi3_start.sh
pi5/: pi5_start.sh
pi5/src/pi5_bringup/: package.xml  setup.cfg  setup.py
pi5/src/pi5_bringup/launch/: pi5_bringup.launch.py
pi5/src/pi5_heartbeat/: package.xml  setup.cfg  setup.py
pi5/src/pi5_heartbeat/launch/: heartbeat.launch.py
pi5/src/pi5_heartbeat/pi5_heartbeat/: heartbeat_node.py
pi5/src/pi5_llm_bridge/: package.xml  setup.cfg  setup.py
pi5/src/pi5_llm_bridge/config/: llm_params.yaml
pi5/src/pi5_llm_bridge/launch/: llm_bridge.launch.py
pi5/src/pi5_llm_bridge/pi5_llm_bridge/: llm_bridge.py
pi5/src/pi5_tts_bridge/: package.xml  setup.cfg  setup.py
pi5/src/pi5_tts_bridge/launch/: tts_bridge.launch.py
pi5/src/pi5_tts_bridge/pi5_tts_bridge/: tts_bridge.py
