<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpu_scheduler</name>
  <version>0.9.0</version>
  <description>GPU task scheduler for Jetson — YOLO/Whisper priority management</description>
  <maintainer email="ahlijin@163.com">legend</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>trinity_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
