<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pi5_llm_bridge</name>
  <version>0.9.0</version>
  <description>LLM bridge — ROS2 service wrapping Ollama HTTP API</description>
  <maintainer email="ahlijin@163.com">legend</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>trinity_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
